# TheProblemSolver

./: .gitignore  CMakeLists.txt  README.md  TODO.md
libs/imgui/backends/: imgui_impl_android.cpp  imgui_impl_opengl3.cpp
src/app/: app.cpp  app.h  count_timer.cpp  count_timer.h  hit_manager.cpp  hit_manager.h  main.cpp  particles.cpp  particles.h  target_spawner.cpp  target_spawner.h  tasks_menu.cpp  tasks_menu.h
src/app/entities/: object.cpp  object.h  player.cpp  player.h  target.cpp  target.h
src/app/states/: game_state.cpp  game_state.h  settings_state.cpp  settings_state.h  state_manager.cpp  state_manager.h  state_type.h
src/editor/: editor.cpp  editor.h
src/engine/audio/: audio_system.cpp  audio_system.h  music_type.h  sound_type.h
src/engine/core/: app_desc.h  clock.cpp  clock.h  engine.cpp  engine.h  event.h  input.cpp  input.h  window.cpp  window.h
src/engine/graphics/: camera.cpp  camera.h  color.h  renderer.cpp  renderer.h  renderer2d.cpp  renderer2d.h  shader.cpp  shader.h
src/engine/math/: rand.cpp  rand.h  transform.cpp  transform.h  vertex.h
src/engine/physics/: collider.cpp  collider.h  collision_data.h  physics_body.cpp  physics_body.h  physics_world.cpp  physics_world.h  ray.cpp  ray.h
src/engine/resources/: cubemap.cpp  cubemap.h  font.cpp  font.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  resource_manager.cpp  resource_manager.h  texture.cpp  texture.h
src/engine/ui/: ui_anchor.h  ui_button.cpp  ui_button.h  ui_canvas.cpp  ui_canvas.h  ui_text.cpp  ui_text.h
src/engine/utils/: utils.cpp  utils.h  utils_file.cpp  utils_file.h
